--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,6 +21,10 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
+      run: ls
+    - name: Grant execute permission for gradlew
+      run: cd DiceOut
+    - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
