--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
       # specify the version you desire here
-      - image: circleci/openjdk:8-jdk
+      - image: node-alpine
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -47,7 +47,9 @@ jobs:
 
               echo $BUCKET_TO_DEPLOY > t.txt
               echo $BUCKET_TO_DEPLOY"Waara"
-              cat t.txt
+              if [ -n $BUCKET_TO_DEPLOY ];then
+                echo "a gya"
+              fi  
 
 
       - run: 
